--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
     <h1>Cryptofolio - Your Cryptocurrency Tracker</h1>
   </main>
 
-  <form id="main_form">
-    <div class="field has-addons has-addons-centered">
+  <form id="import_tx" class="field has-addons has-addons-centered">
+    <p class="control">
+      <input id="tx_id" class="input is-small" type="text" placeholder="f720602b770f092bd5338fa10f91e87bf9c47950a7088cd43b43787e69eab964">
+    </p>
 
+    <p class="control">
+      <button class="button is-info is-small" type="submit">Import From Tx ID</button>
+    </p>
+  </form>
+
+  <form id="purchase_form">
+    <div class="field has-addons has-addons-centered">
 
       <p class="control">
         <span class="select">
@@ -32,7 +41,7 @@
         <input id="amount" class="input has-text-centered" type="number" min="0" step="0.01" placeholder="Amount">
         <span id="crypto_unit" class="unit">BTC</span>
       </p>
-      
+
       <p class="control">
         <input id="total_price" class="input has-text-centered" type="number" min="0" autofocus="autofocus" placeholder="Total Price">
         <span id="global_unit" class="unit">$</span>
@@ -47,8 +56,14 @@
         </span>
       </p>
 
+    </div>
+    <div id="submit_buttons" class="field has-addons has-addons-centered">
       <p class="control">
-        <button class="button is-success" type="submit">Add Coin</button>
+        <button class="button is-success" type="submit">Add Purchase</button>
+      </p>
+
+      <p class="control">
+        <button class="button is-danger" type="submit">Add Sell</button>
       </p>
     </div>
   </form>
