--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           <th>Price Paid/Coin</th>
           <th>Market Value/Coin</th>
           <th>Profit</th>
+          <th>Delete</th>
         </tr>
       </thead>
       <tbody>
