Tx ID import working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Cryptofolio - Your Cryptocurrency Tracker</h1>
   </main>
 
-  <form id="import_tx" class="field has-addons has-addons-centered">
+  <form id="tx_form" class="field has-addons has-addons-centered">
     <p class="control">
       <input id="tx_id" class="input is-small" type="text" placeholder="f720602b770f092bd5338fa10f91e87bf9c47950a7088cd43b43787e69eab964">
     </p>
