Stats complete + working

--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
       <div class="level-item has-text-centered">
         <div>
           <p class="heading">Total Purchase Value</p>
-          <p class="title">£13,456.06</p>
+          <p id="total_purchase_value" class="title">0.00</p>
         </div>
       </div>
       <div class="level-item has-text-centered">
         <div>
           <p class="heading">Total Profit</p>
-          <p class="title">£3123.85</p>
+          <p id="total_profit" class="title">0.00</p>
         </div>
       </div>
       <div class="level-item has-text-centered">
         <div>
           <p class="heading">Bitcoin</p>
-          <p class="title">2.57</p>
+          <p id="total_btc" class="title">0</p>
         </div>
       </div>
       <div class="level-item has-text-centered">
         <div>
           <p class="heading">Litecoin</p>
-          <p class="title">164.24</p>
+          <p id="total_ltc"class="title">0</p>
         </div>
       </div>
       <div class="level-item has-text-centered">
         <div>
           <p class="heading">Ethereum</p>
-          <p class="title">17.48</p>
+          <p id="total_eth" class="title">0</p>
         </div>
       </div>
     </nav>
